<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="action_cat_male">1</string>
    <string name="action_cat_female">2</string>
    <string name="action_kitten">3</string>
    <string name="catfood"> СОЖРИ МЕНЯ!!!!!</string>
    <string name="action_favorite"></string>
    <string name="create_new">create_new</string>
    <string name="open">open</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="click_me">Long Click Me</string>
    <string name="check">Check some elements"</string>
    <string-array name="avengers_Name">
        <item>Кеп</item>
        <item>Железный человек</item>
        <item>Халк</item>
        <item>Виджен</item>
        <item>Алая ведьма</item>
        <item>Черная вдова</item>
        <item>Соколиный глаз</item>
        <item>Человек-муравей</item>
        <item>Человек-паук</item>
        <item>Зимний солдат</item>
        <item>Железный патриот</item>
        <item>Черная пантера</item>
    </string-array>

    <string-array name="color">
        <item>Olive</item>
        <item>Yellow</item>
        <item>Olivedrab</item>
        <item>Yellowgreen</item>
        <item>Darkolivegreen</item>
        <item>GreenYellow</item>
        <item>Lawngreen</item>
        <item>Chartreuse</item>
        <item>Lime</item>
        <item>Limegreen</item>
        <item>Forestgreen</item>
        <item>Darkgreen</item>
    </string-array>
Добавила </resources>
